--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}World Cities{% endblock %}
 {% block content %}
 <h1>Hello Cities of the World!</h1>
-<p>This app is named "{{ app["application_name"] }}". You can search for information on cities with a population over 1000. Use the local name.
+<p>You can search for information on cities with a population over 1000. Use the local name.
 As an alternative, you can directly access city information using "/city/name", e.g., <a href="/city/Friedrichshafen">/city/Friedrichshafen</a>.</p>
 <br>
 <p>
